<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IndigoGestionStock</string>
    <string name="entrer">Entrer</string>
    <string name="login">login</string>
    <string name="utilisateur">utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fournisseur">Fournisseur</string>
    <string name="article">Article</string>
    <string name="scanner_le_code">scanner ou saisir le code a barre</string>
    <string name="quantit">Quantité</string>
    <string name="message">Message</string>
    <string name="emplacement">Emplacement</string>
    <string name="site">Site</string>
    <string name="rayon">Rayon</string>
    <string name="d_chargement">Déchargement</string>
    <string name="lot">Lot</string>
    <string name="camion">Camion</string>
    <string name="chauffeur">Chauffeur</string>
    <string name="transporteur">Transporteur</string>
    <string name="valider">Valider</string>
    <string name="scannrer_le_code_a_barre">scanner ou saisir le code a barre de la commande</string>

    <string-array name="Rayon">
        <item>A 1</item>
        <item>A 2</item>
        <item>A 3</item>
        <item>A 4</item>
        <item>A 5</item>
        <item>B 1</item>
        <item>B 2</item>
        <item>B 3</item>
        <item>B 4</item>
        <item>B 5</item>
        <item>C 1</item>
        <item>C 2</item>
        <item>C 3</item>
        <item>C 4</item>
        <item>C 5</item>
        <item>D 1</item>
        <item>D 2</item>
        <item>D 3</item>
        <item>D 4</item>
        <item>D 5</item>
        <item>E 1</item>
        <item>E 2</item>
        <item>E 3</item>
        <item>E 4</item>
        <item>E 5</item>
        <item>F 1</item>
        <item>F 2</item>
        <item>F 3</item>
        <item>F 4</item>
        <item>F 5</item>
    </string-array>
    <string-array name="Clients">
        <item>"Spotsmeyer's Furnishings"</item>
        <item>"Progressive Home Furnishings"</item>
        <item>"New Concepts Furniture"</item>
        <item>"Candoxy Canada Inc."</item>
        <item>"Elkhorn Airport"</item>
        <item>"London Candoxy Storage Campus"</item>
        <item>"Metatorad Malaysia Sdn Bhd"</item>
        <item>"TraxTonic Sdn Bhd"</item>
        <item>"Somadis"</item>
        <item>"ElectroMAROC"</item>
        <item>"Zanlan Corp."</item>
        <item>"Karoo Supermarkets"</item>
        <item>"Durbandit Fruit Exporters"</item>
        <item>"Woonboulevard Kuitenbrouwer"</item>
        <item>"Meersen Meubelen"</item>
        <item>"Candoxy Nederland BV"</item>
        <item>"Nieuwe Zandpoort NV"</item>
        <item>"Antarcticopy"</item>
        <item>"Lovaina Contractors"</item>
        <item>"Livre Importants"</item>
        <item>"Bilabankinn"</item>
        <item>"Gagn &amp; Gaman"</item>
        <item>"Heimilisprydi"</item>
        <item>"Deschamps"</item>
        <item>"Candoxy Kontor A/S"</item>
        <item>"Carl Anthony"</item>
        <item>"Ravel Møbler"</item>
        <item>"Lauritzen Kontormøbler A/S"</item>
        <item>"Marsholm Karmstol"</item>
        <item>"Konberg Tapet AB"</item>
        <item>"Englunds Kontorsmöbler AB"</item>
        <item>"Slubrevik Senger AS"</item>
        <item>"Klubben"</item>
        <item>"Sjøboden"</item>
    </string-array>
</resources>