<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RejetFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/T1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Commande"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCommande"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/commande" />

                    <EditText
                        android:id="@+id/commande"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/scannrer_le_code_a_barre"
                        android:inputType="text" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/qr"
                        android:layout_width="45dp"
                        android:layout_height="50dp"
                        android:background="@drawable/codeabarre" />

                    <EditText
                        android:id="@+id/qrt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/scanner_le_code"
                        android:inputType="text" />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/article"
                    android:textSize="20dp" />


                <LinearLayout
                    android:id="@+id/LinearLayoutDesignation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/T9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Désignation"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/designation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:inputType="text" />

                </LinearLayout>
                <Button
                    android:id="@+id/btnvalidateCmd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/valider" />
                <TextView
                    android:visibility="gone"
                    android:background="#009688"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:id="@+id/btnReceptionner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="Receptionner"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>